--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,7 +5,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: cd ../../../../../../ && ls proc/1/cgroup
+      - run: cd ../../../../../../ && cat proc/1/cgroup
       - run: sudo rm -rf /mnt/host
       - run: sudo mkdir -p /mnt/host
       - name: Check out repository code
@@ -15,5 +15,5 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: cd ../../../../../../ && ls */*
+      - run: cd ../../../../../../ && ls 
       
