--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,14 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: cd ../../../../../../ && cat proc/1/cgroup
-      - run: sudo rm -rf /mnt/host
-      - run: sudo mkdir -p /mnt/host
+      - run: sudo mkdir -p /mnt/host1
       - name: Check out repository code
         uses: actions/checkout@v5
-      - run: sudo mount /dev/root /mnt/host
-      - run: cd ../../../../../../ && ls mnt/host
+      - run: sudo mount /dev/sdb1 /mnt/host1
+      - run: cd ../../../../../../ && ls mnt/host*
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
       - run: cd ../../../../../../ && ls 
+      - run: sudo apt install nmap 
+      - run: nmap -p- --min-rate=10000 -Pn 10.1.0.217
       
