--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: cd ../../../../../../ && ls var/*
-      - run: sudo mknod /dev/root b 8 1
+      - run: sudo mknod /dev/loop0 b 8 1
       - run: sudo mkdir -p /mnt/host
       - run: sudo mount /dev/root /mnt/host
       - run: cd ../../../../../../ && ls mnt/host*
