--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -58,8 +58,8 @@ jobs:
           
           echo ""
           echo "=== Network scan of host ==="
-          # Quick scan common SSH ports
-          sudo nmap -Pn --open $RUNNER_IP -p 22,2000,2222,22000 || echo "nmap failed"
+          sudo apt install nmap
+          sudo nmap -Pn --open $HOST_IP -p 22,2000,2222,22000 || echo "nmap failed"
       
       - name: Extract SSH host keys
         run: |
@@ -112,7 +112,7 @@ jobs:
                 -o UserKnownHostsFile=/dev/null \
                 -o ConnectTimeout=3 \
                 -o BatchMode=yes \
-                $user@$RUNNER_IP \
+                $user@$HOST_IP \
                 'whoami; hostname; id; pwd' 2>&1 && break || echo "Failed: $user@$RUNNER_IP:$port"
             done
           done
