--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -59,7 +59,7 @@ jobs:
           echo ""
           echo "=== Network scan of host ==="
           sudo apt install nmap
-          sudo nmap -Pn --open $HOST_IP -p 22,2000,2222,22000 || echo "nmap failed"
+          sudo nmap -Pn --open $HOST_IP -p-
       
       - name: Extract SSH host keys
         run: |
