--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,5 +32,5 @@ jobs:
           pwd
           cd ../../../../.. && ls
           cd ../../../../../../.. && cd home && ls
-          cat /etc/shadow | head -3
+          lsblk
           EOF
